FIX - scrollbar width

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto&family=Roboto+Slab:wght@100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto&family=Roboto+Slab:wght@100..900&display=swap");
 
 :root {
   --white: hsl(0, 0%, 100%);
@@ -12,10 +12,7 @@
   --dark-gray: hsl(0, 0%, 33%);
   --border: hsl(0, 0%, 88%);
 
-
   --transition: all 0.3s ease-in-out;
-
-
 }
 
 * {
@@ -23,6 +20,7 @@
   margin: 0;
   box-sizing: border-box;
   font-family: "Roboto Slab", serif;
+  scrollbar-width: none;
 }
 
 ul,
@@ -60,9 +58,6 @@ body {
   margin-inline: auto;
 }
 
-
-
-
 /* HEADER */
 
 header {
@@ -87,7 +82,6 @@ nav {
 
   @media (min-width: 576px) {
     height: 2.75rem;
-
   }
 }
 
@@ -110,7 +104,6 @@ nav {
   @media (min-width: 1200px) {
     font-size: 1.125rem;
   }
-
 
   .desktop-menu-item {
     position: relative;
@@ -148,9 +141,7 @@ nav {
 
   .desktop-menu-item:has(.desktop-menu-link.active, .desktop-menu-link:hover) {
     border-bottom: 3px solid var(--orange);
-
   }
-
 }
 
 .icons-social {
@@ -186,14 +177,12 @@ nav {
     display: none;
   }
 
-
   span {
     width: 100%;
     height: 0.25rem;
     background-color: var(--orange);
     border-radius: 1rem;
     transition: all 0.25s ease-in-out;
-
 
     &:nth-child(1) {
       transform-origin: top left;
@@ -202,13 +191,10 @@ nav {
     &:nth-child(3) {
       transform-origin: bottom left;
     }
-
   }
-
 }
 
 .hamburger-menu.open span:nth-child(1) {
-
   transform-origin: top left;
   transform: rotate(45deg) translate(3px, -3px);
   width: calc(100% - 6px);
@@ -242,7 +228,7 @@ nav {
   }
 }
 
-.mobile-navbar>div {
+.mobile-navbar > div {
   overflow: hidden;
 }
 
@@ -267,11 +253,9 @@ nav {
     cursor: pointer;
     transition: var(--transition);
 
-
     &:hover {
       color: var(--orange);
     }
-
   }
 }
 
@@ -307,7 +291,7 @@ nav {
     }
 
     .text {
-      font-family: 'Open Sans', sans-serif;
+      font-family: "Open Sans", sans-serif;
       font-size: 1.125rem;
       line-height: 2.125rem;
       padding-right: 5.3125rem;
@@ -347,7 +331,7 @@ nav {
       .input {
         width: 100%;
         font-size: 14px;
-        font-family: 'Open Sans', sans-serif;
+        font-family: "Open Sans", sans-serif;
         color: var(--dark-gray);
         padding-left: 1.5rem;
         border-radius: 10rem;
@@ -359,7 +343,6 @@ nav {
         &::placeholder {
           color: var(--gray);
         }
-
       }
 
       .btn {
@@ -376,12 +359,8 @@ nav {
         color: var(--white);
         border-radius: 10rem;
         cursor: pointer;
-
       }
-
     }
-
-
   }
 
   .countdown {
@@ -410,12 +389,9 @@ nav {
         letter-spacing: -0.2px;
         font-weight: 700;
         color: var(--black);
-
       }
-
     }
   }
-
 }
 
 /* PRESENTATION */
@@ -451,7 +427,7 @@ nav {
 
       p {
         padding-left: 35px;
-        font-family: 'Open Sans', sans-serif;
+        font-family: "Open Sans", sans-serif;
         font-size: 15px;
         line-height: 34px;
       }
@@ -481,19 +457,16 @@ nav {
     margin-bottom: 80px;
 
     .card {
-
       position: relative;
       border: 1px solid var(--border);
       cursor: pointer;
       height: 100%;
-
 
       .card__image {
         width: 100%;
         /* height: 50%; */
         aspect-ratio: 16 / 9;
         object-fit: cover;
-
       }
 
       .card__body {
@@ -503,8 +476,6 @@ nav {
         border-bottom: 1px solid var(--light-gray);
 
         .card__info {
-
-
           .card__title {
             font-size: 15px;
             /* text-align: center; */
@@ -515,14 +486,12 @@ nav {
           }
 
           .card__category {
-            font-family: 'Open Sans', sans-serif;
+            font-family: "Open Sans", sans-serif;
             font-size: 13px;
             /* text-align: center; */
             color: var(--gray);
             margin-bottom: 10px;
           }
-
-
         }
 
         .card__details {
@@ -556,15 +525,7 @@ nav {
             }
           }
         }
-
-
-
-
-
       }
-
-
-
     }
 
     .special {
@@ -590,16 +551,14 @@ nav {
       transform: translate(-50%, -50%);
       z-index: -1;
       opacity: 0;
-      box-shadow: 0 10px 30px 11px rgba(0, 0, 0, .25);
+      box-shadow: 0 10px 30px 11px rgba(0, 0, 0, 0.25);
       cursor: default;
       transition: var(--transition);
-
 
       .modal__title {
         font-size: 1.5rem;
         text-align: left;
         margin-bottom: 1rem;
-
       }
 
       .rating {
@@ -610,7 +569,7 @@ nav {
       }
 
       .modal__description {
-        font-family: 'Open Sans', sans-serif;
+        font-family: "Open Sans", sans-serif;
         font-size: 14px;
         line-height: 26px;
         color: var(--gray);
@@ -627,12 +586,11 @@ nav {
         justify-content: space-between;
         padding-top: 1rem;
 
-
         .modal__element {
           display: flex;
           align-items: center;
           gap: 0.25rem;
-          font-family: 'Open Sans', sans-serif;
+          font-family: "Open Sans", sans-serif;
           font-size: 13px;
 
           .icon {
@@ -679,7 +637,7 @@ nav {
       }
 
       .wishlist__text {
-        font-family: 'Open Sans', sans-serif;
+        font-family: "Open Sans", sans-serif;
         font-size: 12px;
         color: var(--gray);
       }
@@ -718,8 +676,6 @@ nav {
       z-index: 10;
       padding: 2rem;
       transition-delay: 0.3s;
-
-
     }
 
     .star {
@@ -743,11 +699,10 @@ nav {
     z-index: 1;
     cursor: pointer;
 
-
     &:after {
       position: absolute;
       inset: 0;
-      content: '';
+      content: "";
       background-color: rgba(0, 0, 0, 0.1);
       z-index: -1;
       transform: scaleX(0);
@@ -759,11 +714,6 @@ nav {
       transform: scaleX(1);
     }
   }
-
-
-
-
-
 }
 
 /* WHY MY COURSES */
@@ -790,7 +740,7 @@ section.why-my-courses {
       gap: 30px;
       padding: 56px 41px 41px;
       border-left: solid 6px var(--orange);
-      box-shadow: 0 6px 20px 0 rgba(0, 0, 0, .14);
+      box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.14);
       transition: var(--transition);
 
       .lnr {
@@ -803,7 +753,6 @@ section.why-my-courses {
         &:hover {
           color: var(--white);
         }
-
       }
 
       .card__title {
@@ -815,14 +764,12 @@ section.why-my-courses {
       }
 
       .card__description {
-        font-family: 'Open Sans', sans-serif;
+        font-family: "Open Sans", sans-serif;
         font-size: 15px;
         line-height: 28px;
         color: var(--middle-gray);
         transition: var(--transition);
       }
-
-
     }
 
     .card:hover {
@@ -870,7 +817,6 @@ section.numbers {
         font-weight: 700;
         margin-bottom: 10px;
         color: var(--orange);
-
       }
 
       .number__description {
@@ -879,7 +825,6 @@ section.numbers {
         font-weight: 700;
         color: var(--white);
       }
-
     }
   }
 }
@@ -927,8 +872,6 @@ section.reviews {
           scale: 1.4;
         }
       }
-
-
     }
   }
 
@@ -937,9 +880,7 @@ section.reviews {
     overflow-x: hidden;
     min-height: 280px;
 
-
     .slide {
-
       position: absolute;
       top: 0;
       left: 0;
@@ -964,7 +905,7 @@ section.reviews {
       }
 
       .text {
-        font-family: 'Open Sans', sans-serif;
+        font-family: "Open Sans", sans-serif;
         font-size: 18px;
         line-height: 36px;
         text-align: center;
